--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="icons-container">
                 <!-- Card icon -->
                 <div class="icon-card d-flex">
-                    <i class="fas fa-cat"></i>
+                    <i class="fas fa-cat color"></i>
                     <h4>Cat</h4>
                 </div>
 
