aggiunto style colori alle icone

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <!-- fine header main -->
 
             <!-- Inizio section Icone: container -->
-            <div class="icons-container">
+            <div class="icons-container d-flex">
                 <!-- Card icon -->
                 <div class="icon-card d-flex">
                     <i class="fas fa-cat color"></i>
